# mystical-app

./: .augment-guidelines  .gitignore  Makefile  Mystic-Reading-App-PRD.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/src/: app.py
backend/src/api/: __init__.py
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: admin.py  astro.py  auth.py  numerology.py  partners.py  readings.py  tarot.py  zodiac.py
backend/src/core/: __init__.py  astro.py  config.py  database.py  exceptions.py  numerology.py  tarot.py  zodiac.py
backend/src/middleware/: __init__.py  rate_limit.py  security.py
backend/src/models/: __init__.py  base.py  deck.py  partner.py  payment.py  persona.py  reading.py  spread.py  user.py
backend/src/schemas/: reading.py
backend/src/services/: reading_service.py
backend/src/services/ai/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  meta_provider.py  openai_provider.py
backend/src/services/auth/: __init__.py  auth_service.py  jwt_service.py  password_service.py
backend/tests/: __init__.py  test_api.py  test_core.py  test_services.py
data/decks/: rider_waite_smith.json
data/spreads/: default.json
scripts/: setup.sh  test_all.sh
